# grovean

./: .gitignore  AGENTS.md  Cargo.toml  README.md  grovean  limine.conf  x86_64-example.json
.cargo/: config.toml
.github/workflows/: test.yml
crates/basic-crate/: Cargo.toml
crates/basic-crate/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: allocator.rs  lib.rs  main.rs
crates/core/src/dat/: terminal.rs
crates/core/src/dev/: mod.rs  serial.rs
crates/core/src/dev/framebuffer/: fb0.rs  mod.rs
crates/extended-crate/: Cargo.toml
crates/extended-crate/src/: lib.rs
crates/grovean/: Cargo.toml
crates/grovean/src/: lib.rs
crates/grovean/src/dev/: serial.rs
crates/grovean/src/dev/framebuffer/: fb0.rs
crates/grovean/src/memory/: frame_allocator.rs  memory_map.rs  mod.rs
linker/: aarch64.ld  x86_64.ld
