[package]
name = "gk"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
font8x8 = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dev-dependencies]
ktest = { version = "0.1.6", features = ["limine"] }

[lib]
doctest = false # disable doctests and their log outputs (we have no doctests)