[package]
name = "grovean"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "A modern operating system kernel"
license = "MIT"
repository = "https://github.com/philogroves/grovean"

[dependencies]
limine = "0.5.0"
volatile = "0.2.6"
spin = "0.5.2"
font8x8 = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
uart_16550 = "0.2.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dev-dependencies]
kunit = "0.1.1" # { path = "../../../kseries/kunit", version = "0.1.1" }

[lib]
doctest = false # disable doctests and their log outputs (we have no doctests)

[[bin]]
name = "grovean"
path = "src/bin/grovean.rs"
test = false
bench = false
